--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           mkdir build
           cd build
+          conda init
           conda activate ops-mac
           conda info
           cmake .. -DMUMPS_DIR=$PWD/../../mumps/build
